kylin-music (1.1.0-34) v101; urgency=medium

  * BUG号：
   - 89148 【内测】【声音】插3.5mm耳机的情况下；播放音乐；拔掉耳机“音乐”不暂停.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 21 Dec 2021 15:37:24 +0800

kylin-music (1.1.0-33) v101; urgency=medium

  * BUG号：
   - 83171 【音乐】【概率性】右键正在播放中的音乐“从歌单中删除”应用闪退且产生core文件，概率1/100.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Thu, 02 Dec 2021 16:47:47 +0800

kylin-music (1.1.0-32) v101; urgency=medium

  * BUG号：无.
  * 任务号：61040 【SP2】各组件藏文翻译导入----kylin-music.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 19 Nov 2021 17:35:27 +0800

kylin-music (1.1.0-31) v101; urgency=medium

  * BUG号：
   - 82817【音乐】【PTOF】添加音乐后，搜索框使用搜狗拼音只能一次性输入中文，第二次继续输入则为英文字符
   - 82831【音乐】深色主题，使用键盘“下键”选择搜索到的歌曲，被选中的歌曲名部分被隐藏
   - 82841【音乐】【概率性】无法使用键盘“下键”选择搜索到的歌曲，概率10/15.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Mon, 11 Oct 2021 19:05:14 +0800

kylin-music (1.1.0-30) v101; urgency=medium

  * BUG号：
   - 81074【音乐】歌单中歌曲播放时删除该歌单后歌曲还能正常播放
   - 82850【音乐】切换主题之前播放过的音乐列表行字体颜色未适应主题.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Mon, 11 Oct 2021 09:38:49 +0800

kylin-music (1.1.0-29) v101; urgency=medium

  * BUG号：
   - 80989【卓怡】【声音】音乐播放器播放音频声音小.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Mon, 27 Sep 2021 19:12:56 +0800

kylin-music (1.1.0-28) v101; urgency=medium

  * BUG号：
   - 78623【音乐】音乐最大化后，title栏依旧显示最大化按钮，点击依旧为最大化状态，第二次点击才可还原.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 17 Sep 2021 14:12:56 +0800

kylin-music (1.1.0-27) v101; urgency=medium

  * BUG号：
   - 69496【音乐】歌曲列表-选择歌曲右击-从歌单中删除/从本地删除，歌曲暂停状态下会自动播放下一首音乐
   - 79694【音乐】【3a5000】【mips】音乐文件通过音乐打开，会弹出一个空白框
   - 77622【音乐】插入u盘再拔出u盘后，添加本地文件/文件夹会显示已经拔出的U盘.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Thu, 16 Sep 2021 09:58:56 +0800

kylin-music (1.1.0-26) v101; urgency=medium

  * BUG号：