@@ -1,0 +1,7 @@
+#!/bin/bash
+
+make clean
+
+rm -f kylin-music.pro.user \
+    debian/files
+
